2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp: Updated projects.

2008-09-17  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs, Gui/NRefactoryResolver.cs,
	  Gui/CSharpTextEditorCompletion.cs: Fixed code completion issue.

2008-09-17  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: Some changes required for unit
	  testing.

2008-09-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/MemberCompletionData.cs: Improve rendering of documentation. The
	  new EscapeText call also fixes bug #416842.

2008-09-16  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs: Removed some debug messages.

2008-09-16  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/NewCSharpExpressionFinder.cs,
	  Gui/CSharpTextEditorCompletion.cs: fixed regression 325081.

2008-09-15  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: fixed possible null reference exception.

2008-09-15  Mike Krüger <mkrueger@novell.com> 

	* Gui/NewCSharpExpressionFinder.cs, Gui/CSharpTextEditorCompletion.cs:
	  added namespace expression context.

2008-09-15  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed code completion bug.

2008-09-15  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: added typeof ( context.

2008-09-15  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: added base class context.

2008-09-15  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed regression 334620.

2008-09-15  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed regression 325509.

2008-09-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/MemberCompletionData.cs: Use the EmitMarkup flag when generating
	  member documentation.
	* Gui/CSharpAmbience.cs: Escape '<' and '>' when emitting type names